Header e atualizações nas cores do layout

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="resource/img/logo-red/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resource/img/logo-red/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resource/img/logo-red/favicon-16x16.png">
+    <link rel="manifest" href="resource/img/logo-red/site.webmanifest">
+
     <title>exportME</title>
-    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+
+        <header>
+            <div class="img-wrapper">
+                <img src="resource/img/bg-developer-a.jpg" alt="">
+            </div>
+            <div class="banner">
+                <h1>Web Developer</h1>
+                <h2> <span id="h2-header">& </span> Front Designer</h2>
+                <p>Sócrates Costa</p>
+                <button>Saiba mais</button>
+            </div>
+        </header>
+
+    </div>
 </body>
+
 </html>
