--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
     <link rel="icon" type="image/png" sizes="32x32" href="resource/img/logo-red/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resource/img/logo-red/favicon-16x16.png">
     <link rel="manifest" href="resource/img/logo-red/site.webmanifest">
-
+    <script defer src="./script.js"></script>
     <title>exportME</title>
 </head>
 
 <body>
     <div class="container">
+
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>Fechar</span>
+        </div>
 
         <header>
             <div class="img-wrapper">
@@ -29,6 +36,24 @@
                 <button>Saiba mais</button>
             </div>
         </header>
+
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contatos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamentos</a></li>
+                </ul>
+            </nav>
+
+            <div class="social-media">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-github-alt"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
 
     </div>
 </body>
