Atualizacao conhecimento, projetos, contato, orcamento

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -53,7 +53,177 @@
                 <a href="#"><i class="fab fa-github-alt"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="sessao-conhecimento">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, quod id nostrum sequi
+                            nesciunt totam placeat delectus quibusdam vel. Repudiandae veniam fuga placeat vitae
+                            delectus est id nobis optio eum?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus corrupti nulla deleniti
+                            suscipit id ut, autem a. Laboriosam id pariatur rerum, quae harum dolorem? Porro ratione aut
+                            assumenda nihil ab.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit animi blanditiis
+                            aspernatur voluptas quas amet quod maxime ullam fuga. Fugit illo odio atque, soluta quos
+                            modi architecto voluptatem hic quidem!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquam eaque ipsam voluptate
+                            nostrum ab unde numquam, voluptas labore hic, saepe animi. Molestiae architecto perspiciatis
+                            esse voluptates pariatur, ab vel.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, placeat expedita quasi
+                            dolores veritatis quis iure, officiis, tempora minima nam officia rem accusantium laborum
+                            voluptas natus! Natus exercitationem repudiandae error.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolore impedit, ducimus qui
+                            voluptate, explicabo corrupti commodi repellat eaque rem corporis voluptatibus cumque in,
+                            ipsam neque exercitationem dicta nam esse?</p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="./resource/img/conhecimentos.png" alt="imagem conhecimento">
+                </div>
+            </div>
+        </section>
+
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./resource/img/proj1.jpg" alt="imagem do projeto ToDo">
+                    </div>
+                    <div class="card-info">
+                        <h2>ToDo List</h2>
+                        <h3>Javascript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus expedita rat assumenda at doloremque. Nesciunt non quidem quia?</p>
+                        <button class="btn">Saiba mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./resource/img/proj2.jpg" alt="imagem do projeto casa bela">
+                    </div>
+                    <div class="card-info">
+                        <h2>Casa Bela</h2>
+                        <h3>HTML - CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus expedita rat assumenda at doloremque. Nesciunt non quidem quia?</p>
+                        <button class="btn">Saiba mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./resource/img/proj3.jpg" alt="imagem do projeto paint">
+                    </div>
+                    <div class="card-info">
+                        <h2>Paint</h2>
+                        <h3>HTML - CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus expedita rat assumenda at doloremque. Nesciunt non quidem quia?</p>
+                        <button class="btn">Saiba mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sessao-contato" id="contato">
+            <div class="contato-wrapper">
+                <div class="contato-left"></div>
+
+                <div class="contato-right">
+                    <h1>Contato</h1>
+                    <form>
+                        <div class="input-group">
+                            <input type="text" class="field" id="nome">
+                            <label for="nome" class="field-label">Nome</label>
+                        </div>
+                        <div class="input-group">
+                            <input type="text" class="field" id="email">
+                            <label for="email" class="field-label">E-mail</label>
+                        </div>
+                        <div class="input-group">
+                            <textarea class="field" id="msg"></textarea>
+                            <label for="msg" class="field-label">Mensagem</label>
+                        </div>
+                        <button type="submit" class="btn btn-submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section class="sessao-orcamento" id="orcamento">
+            <div class="orcamento-wrapper">
+                <h1>Faça o orçamento</h1>
+                <form>
+                    <label for="qtde">Quantidade de páginas</label>
+                    <input type="number" min="1" name="qtde" id="qtde">
+                    <label for="js">Preciso de um script JS</label>
+                    <input type="checkbox" name="js" id="js">
+                    <label>Layout</label>
+                    <div class="group-layout">
+                        <div>
+                            <input type="radio" name="layout" id="layout-sim">
+                            <label for="layout-sim">Preciso de um layout</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="layout" id="layout-nao">
+                            <label for="layout-nao">Já tenho um layout</label>
+                        </div>
+                    </div>
+                    <label for="prazo">Prazo</label>
+                    <input type="range" name="prazo" id="prazo">
+                    <button class="btn btn-orcamento" type="submit">Enviar</button>
+                </form>
+            </div>
+        </section>
 
     </div>
 </body>
