--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
                         </div>
                     </div>
                     <label for="prazo">Prazo</label>
-                    <input type="range" name="prazo" id="prazo">
+                    <input type="range" name="prazo" id="prazo" value="10" min="1" max="10" >
+                    <label id="preco">R$0,00</label>
                     <button class="btn btn-orcamento" type="submit">Enviar</button>
                 </form>
             </div>
@@ -227,7 +228,7 @@
 
         <footer>
             <div class="footer-content">
-                <p>Copyright &copy; 2022  - todos os direitos reservados - sao::c</p>
+                <p>Copyright &copy; 2022, sao::c - todos os direitos reservados</p>
                 <div class="social-list">
                     <ul>
                         <li><a href=""><i class="fab fa-facebook"></i></a></li>
@@ -245,3 +246,4 @@
 </body>
 
 </html>
+
